src/antlr4_generated/CParser.py
# Generated from C.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class CParser ( Parser ):

    grammarFileName = "C.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'='", "'?'", "':'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'&'", 
                     "'!'", "'['", "']'", "'('", "')'", "';'", "'#include'", 
                     "'.'", "'{'", "'}'", "'char'", "'float'", "'int'", 
                     "'void'", "'const'", "'volatile'", "'mutable'", "'if'", 
                     "'else'", "'do'", "'while'", "'for'", "'break'", "'continue'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "TYPECHAR", 
                      "TYPEFLOAT", "TYPEINT", "TYPEVOID", "CONST", "VOLATILE", 
                      "MUTABLE", "IF", "ELSE", "DO", "WHILE", "FOR", "BREAK", 
                      "CONTINUE", "RETURN", "COMMENT", "MULTICOMMENT", "INTEGER", 
                      "FLOAT", "IDENTIFIER", "CHARACTER", "STRING", "WS" ]

    RULE_oplevel15 = 0
    RULE_oplevel14 = 1
    RULE_oplevel13 = 2
    RULE_oplevel12 = 3
    RULE_oplevel11 = 4
    RULE_oplevel10 = 5
    RULE_oplevel9 = 6
    RULE_oplevel8 = 7
    RULE_oplevel7 = 8
    RULE_oplevel6 = 9
    RULE_oplevel5 = 10
    RULE_oplevel4 = 11
    RULE_oplevel3 = 12
    RULE_oplevel2 = 13
    RULE_oplevel1 = 14
    RULE_typeCast = 15
    RULE_program = 16
    RULE_include = 17
    RULE_stdInclude = 18
    RULE_customInclude = 19
    RULE_functionDeclaration = 20
    RULE_functionDefinition = 21
    RULE_parameters = 22
    RULE_parameter = 23
    RULE_paramDeclarator = 24
    RULE_paramDeclarator1 = 25
    RULE_pointerPart = 26
    RULE_arrayPart = 27
    RULE_statements = 28
    RULE_statement = 29
    RULE_ifCond = 30
    RULE_elseCond = 31
    RULE_whileCond = 32
    RULE_doWhileCond = 33
    RULE_forLoop = 34
    RULE_forLoopInitStatement = 35
    RULE_forLoopCondition = 36
    RULE_forLoopIterationExpression = 37
    RULE_variableDeclaration = 38
    RULE_declarationSpecifier = 39
    RULE_cvQualifier = 40
    RULE_declaratorInitializer = 41
    RULE_declarator1 = 42
    RULE_initializer = 43
    RULE_returnStmt = 44
    RULE_breakStmt = 45
    RULE_continueStmt = 46
    RULE_arguments = 47
    RULE_functionCall = 48
    RULE_variable = 49
    RULE_identifier = 50
    RULE_pointer = 51
    RULE_typeDeclaration = 52
    RULE_floatLiteral = 53
    RULE_integerLiteral = 54
    RULE_characterLiteral = 55
    RULE_stringLiteral = 56

    ruleNames =  [ "oplevel15", "oplevel14", "oplevel13", "oplevel12", "oplevel11", 
                   "oplevel10", "oplevel9", "oplevel8", "oplevel7", "oplevel6", 
                   "oplevel5", "oplevel4", "oplevel3", "oplevel2", "oplevel1", 
                   "typeCast", "program", "include", "stdInclude", "customInclude", 
                   "functionDeclaration", "functionDefinition", "parameters", 
                   "parameter", "paramDeclarator", "paramDeclarator1", "pointerPart", 
                   "arrayPart", "statements", "statement", "ifCond", "elseCond", 
                   "whileCond", "doWhileCond", "forLoop", "forLoopInitStatement", 
                   "forLoopCondition", "forLoopIterationExpression", "variableDeclaration", 
                   "declarationSpecifier", "cvQualifier", "declaratorInitializer", 
                   "declarator1", "initializer", "returnStmt", "breakStmt", 
                   "continueStmt", "arguments", "functionCall", "variable", 
                   "identifier", "pointer", "typeDeclaration", "floatLiteral", 
                   "integerLiteral", "characterLiteral", "stringLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    TYPECHAR=31
    TYPEFLOAT=32
    TYPEINT=33
    TYPEVOID=34
    CONST=35
    VOLATILE=36
    MUTABLE=37
    IF=38
    ELSE=39
    DO=40
    WHILE=41
    FOR=42
    BREAK=43
    CONTINUE=44
    RETURN=45
    COMMENT=46
    MULTICOMMENT=47
    INTEGER=48
    FLOAT=49
    IDENTIFIER=50
    CHARACTER=51
    STRING=52
    WS=53

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Oplevel15Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel14(self):
            return self.getTypedRuleContext(CParser.Oplevel14Context,0)


        def oplevel15(self):
            return self.getTypedRuleContext(CParser.Oplevel15Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel15

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel15" ):
                listener.enterOplevel15(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel15" ):
                listener.exitOplevel15(self)



    def oplevel15(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.Oplevel15Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_oplevel15, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.oplevel14()
            self._ctx.stop = self._input.LT(-1)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CParser.Oplevel15Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel15)
                    self.state = 117
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 118
                    self.match(CParser.T__0)
                    self.state = 119
                    self.oplevel14() 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel14Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel13(self):
            return self.getTypedRuleContext(CParser.Oplevel13Context,0)


        def oplevel14(self):
            return self.getTypedRuleContext(CParser.Oplevel14Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel14

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel14" ):
                listener.enterOplevel14(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel14" ):
                listener.exitOplevel14(self)




    def oplevel14(self):

        localctx = CParser.Oplevel14Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_oplevel14)
        try:
            self.state = 130
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.oplevel13()
                self.state = 126
                self.match(CParser.T__1)
                self.state = 127
                self.oplevel14()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.oplevel13()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel13Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel12(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CParser.Oplevel12Context)
            else:
                return self.getTypedRuleContext(CParser.Oplevel12Context,i)


        def oplevel13(self):
            return self.getTypedRuleContext(CParser.Oplevel13Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel13

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel13" ):
                listener.enterOplevel13(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel13" ):
                listener.exitOplevel13(self)




    def oplevel13(self):

        localctx = CParser.Oplevel13Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_oplevel13)
        try:
            self.state = 139
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.oplevel12(0)
                self.state = 133
                self.match(CParser.T__2)
                self.state = 134
                self.oplevel12(0)
                self.state = 135
                self.match(CParser.T__3)
                self.state = 136
                self.oplevel13()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.oplevel12(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel12Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel11(self):
            return self.getTypedRuleContext(CParser.Oplevel11Context,0)


        def oplevel12(self):
            return self.getTypedRuleContext(CParser.Oplevel12Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel12

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel12" ):
                listener.enterOplevel12(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel12" ):
                listener.exitOplevel12(self)



    def oplevel12(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.Oplevel12Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_oplevel12, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.oplevel11(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CParser.Oplevel12Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel12)
                    self.state = 144
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 145
                    self.match(CParser.T__4)
                    self.state = 146
                    self.oplevel11(0) 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel11Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel7(self):
            return self.getTypedRuleContext(CParser.Oplevel7Context,0)


        def oplevel11(self):
            return self.getTypedRuleContext(CParser.Oplevel11Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel11

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel11" ):
                listener.enterOplevel11(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel11" ):
                listener.exitOplevel11(self)



    def oplevel11(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.Oplevel11Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_oplevel11, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.oplevel7(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CParser.Oplevel11Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel11)
                    self.state = 155
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 156
                    self.match(CParser.T__5)
                    self.state = 157
                    self.oplevel7(0) 
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel10Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel9(self):
            return self.getTypedRuleContext(CParser.Oplevel9Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel10

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel10" ):
                listener.enterOplevel10(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel10" ):
                listener.exitOplevel10(self)




    def oplevel10(self):

        localctx = CParser.Oplevel10Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_oplevel10)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.oplevel9()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel9Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel8(self):
            return self.getTypedRuleContext(CParser.Oplevel8Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel9

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel9" ):
                listener.enterOplevel9(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel9" ):
                listener.exitOplevel9(self)




    def oplevel9(self):

        localctx = CParser.Oplevel9Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_oplevel9)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.oplevel8()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel8Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel7(self):
            return self.getTypedRuleContext(CParser.Oplevel7Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel8

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel8" ):
                listener.enterOplevel8(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel8" ):
                listener.exitOplevel8(self)




    def oplevel8(self):

        localctx = CParser.Oplevel8Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_oplevel8)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.oplevel7(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Oplevel7Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel6(self):
            return self.getTypedRuleContext(CParser.Oplevel6Context,0)


        def oplevel7(self):
            return self.getTypedRuleContext(CParser.Oplevel7Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel7

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel7" ):
                listener.enterOplevel7(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel7" ):
                listener.exitOplevel7(self)



    def oplevel7(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.Oplevel7Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_oplevel7, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.oplevel6(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 180
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 178
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = CParser.Oplevel7Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel7)
                        self.state = 172
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 173
                        self.match(CParser.T__6)
                        self.state = 174
                        self.oplevel6(0)
                        pass

                    elif la_ == 2:
                        localctx = CParser.Oplevel7Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel7)
                        self.state = 175
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 176
                        self.match(CParser.T__7)
                        self.state = 177
                        self.oplevel6(0)
                        pass

             
                self.state = 182
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel4(self):
            return self.getTypedRuleContext(CParser.Oplevel4Context,0)


        def oplevel6(self):
            return self.getTypedRuleContext(CParser.Oplevel6Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel6

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel6" ):
                listener.enterOplevel6(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel6" ):
                listener.exitOplevel6(self)



    def oplevel6(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CParser.Oplevel6Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_oplevel6, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.oplevel4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 200
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 198
                    self._errHandler.sync(self);
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = CParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 186
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 187
                        self.match(CParser.T__8)
                        self.state = 188
                        self.oplevel4(0)
                        pass

                    elif la_ == 2:
                        localctx = CParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 189
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 190
                        self.match(CParser.T__9)
                        self.state = 191
                        self.oplevel4(0)
                        pass

                    elif la_ == 3:
                        localctx = CParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 192
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 193
                        self.match(CParser.T__10)
                        self.state = 194
                        self.oplevel4(0)
                        pass

                    elif la_ == 4:
                        localctx = CParser.Oplevel6Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_oplevel6)
                        self.state = 195
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 196
                        self.match(CParser.T__11)
                        self.state = 197
                        self.oplevel4(0)
                        pass

             
                self.state = 202
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Oplevel5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def oplevel4(self):
            return self.getTypedRuleContext(CParser.Oplevel4Context,0)


        def getRuleIndex(self):
            return CParser.RULE_oplevel5

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOplevel5" ):
                listener.enterOplevel5(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOplevel5" ):
                listener.exitOplevel5(self)




    def oplevel5(self):

        localctx = CParser.Oplevel5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_oplevel5)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 203
            self.oplevel4(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
